--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -6,25 +6,37 @@
               android:layout_width="match_parent"
               android:layout_height="60dp" android:baselineAligned="false"
               android:measureWithLargestChild="false" android:visibility="visible"
-              android:weightSum="1" android:id="@+id/cloudOuterL" android:clickable="false"
-    android:gravity="left|center_vertical">
+              android:weightSum="1" android:id="@+id/cloudOuterL"
+    android:transitionName="currentCard"
+    android:gravity="left|center_vertical"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:id="@+id/systemListItemLL1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:gravity="top|left"
+        android:gravity="top|left|center_vertical"
         android:orientation="horizontal"
         android:padding="10dp"
         android:paddingLeft="3dp"
         android:paddingRight="0dp">
 
+        <ImageView
+            android:id="@+id/cardIco"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:maxWidth="100dp"
+            android:scaleType="centerCrop"
+            android:transitionName="currentCardPic"
+            android:src="@drawable/ico" />
+
         <TextView
             android:id="@+id/textViewSystemName"
-            android:transitionName="currentCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:gravity="center_vertical"
             android:maxLines="2"
             android:minLines="2"
@@ -43,6 +55,7 @@
         android:layout_centerVertical="true"
         android:layout_weight="1"
         android:background="@null"
+        android:visibility="gone"
         android:src="@android:drawable/ic_delete" />
 
 </RelativeLayout>
