--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,15 +9,13 @@
     tools:context="ru.orgcom.picky.Main"
     tools:showIn="@layout/app_bar_main">
 
+
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/cardsLV"
-        android:clickable="false"
-        android:focusable="false"
         android:background="#ffffff"
-        android:focusableInTouchMode="false"
-        android:drawSelectorOnTop="false"
         android:dividerHeight="1px"
         android:divider="#f1f1f1"/>
 
@@ -28,8 +26,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
         app:srcCompat="@drawable/plus" />
 
+    <ProgressBar
+        android:id="@+id/topProgressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:max="100"
+        android:progress="30"
+        android:secondaryProgress="30"
+        android:visibility="gone" />
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
