--- a/app/src/main/res/layout/activity_show_me.xml
+++ b/app/src/main/res/layout/activity_show_me.xml
@@ -17,15 +17,75 @@
         app:flexDirection="row"
         app:justifyContent="space_around"
         >
-
     </com.google.android.flexbox.FlexboxLayout>
+
+    <RelativeLayout
+        android:id="@+id/dimmerRL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:alpha="0.7"
+        >
+    </RelativeLayout>
+    <ImageButton
+        android:id="@+id/dimmerButton"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        app:srcCompat="@drawable/ic_play_arrow_black_24dp"
+        android:scaleType="centerCrop"
+        android:padding="75dp"
+        android:background="@drawable/cloudcircle_selector"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:tint="#0000ff"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
+        />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/kidName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        app:hintTextAppearance="@style/MyHintText"
+        android:textColorHint="#c1c1c1"
+        android:gravity="center"
+        >
+
+        <EditText
+            android:id="@+id/kidNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="500dp"
+            android:hint="Имя испытуемого (для отчёта)"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:textColorHint="#c1c1c1"
+            android:singleLine="true"
+            android:gravity="center"
+            android:theme="@style/MyEditText"/>
+
+    </android.support.design.widget.TextInputLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hint"
         android:layout_alignParentBottom="true"
-        android:textSize="10dp"/>
+        android:textSize="20dp"
+        android:textColor="#ffffff"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
