--- a/app/src/main/res/drawable/cloudbox_red.xml
+++ b/app/src/main/res/drawable/cloudbox_red.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" android:padding="0dp">
-    <solid android:color="#d48a86"/>
+    <solid android:color="#ff0d00"/>
     <corners
             android:bottomRightRadius="5dp"
             android:bottomLeftRadius="5dp"
             android:topLeftRadius="5dp"
             android:topRightRadius="5dp"/>
-    <stroke android:color="#d48a86" android:width="3dp"/>
+    <stroke android:color="#ff0d00" android:width="3dp"/>
 </shape>
