--- a/app/src/main/res/layout/activity_show_me.xml
+++ b/app/src/main/res/layout/activity_show_me.xml
@@ -87,5 +87,13 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/tapper"
+        android:alpha="0.9"
+        android:visibility="gone"
+        android:id="@+id/tapper" />
 
 </RelativeLayout>
