--- a/app/src/main/res/layout/content_the_card.xml
+++ b/app/src/main/res/layout/content_the_card.xml
@@ -70,9 +70,22 @@
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
-                android:text="Анонс картинки\n(Посмотри, это - ...)"
+                android:layout_marginRight="15dp"
+                android:text="Анонс картинки"
                 android:textColor="#ffffff"
                 android:textSize="25dp" />
+
+            <TextView
+                android:id="@+id/textHintAnons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:text="- Посмотри, это - СТОЛ!"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -132,9 +145,21 @@
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
-                android:text="Вопрос о картинке\n(Покажи, где ...)"
+                android:layout_marginRight="15dp"
+                android:text="Вопрос о картинке"
                 android:textColor="#ffffff"
                 android:textSize="25dp" />
+            <TextView
+                android:id="@+id/textHintQuestion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:text="- Покажи, где СТОЛ?"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -194,9 +219,21 @@
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
-                android:text="Неправильный выбор\n(Неверно, это - ...).\nТолько утверждение! Не повторяйте вопрос!"
+                android:layout_marginRight="15dp"
+                android:text="Неправильный выбор"
                 android:textColor="#ffffff"
                 android:textSize="25dp" />
+            <TextView
+                android:id="@+id/textHintWrong"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:text="- Неверно, это не СТОЛ"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -236,6 +273,16 @@
                     android:onClick="onClick"
                     android:src="@android:drawable/ic_delete" />
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="Только утверждение!\nНе повторяйте здесь вопрос!"
+                android:textColor="#000000"
+                android:textSize="16dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -256,9 +303,21 @@
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
-                android:text="Верный ответ\n(Правильно, это - ...)"
+                android:layout_marginRight="15dp"
+                android:text="Верный ответ"
                 android:textColor="#ffffff"
                 android:textSize="25dp" />
+            <TextView
+                android:id="@+id/textHintRight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:text="- Правильно, это - СТОЛ!"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
