--- a/app/src/main/res/menu/main_drawer.xml
+++ b/app/src/main/res/menu/main_drawer.xml
@@ -26,8 +26,7 @@
             <item
                 android:id="@+id/nav_manage"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Настройки"
-                android:enabled="false"/>
+                android:title="Настройки"/>
             <item
                 android:id="@+id/nav_terms"
                 android:icon="@android:drawable/ic_dialog_info"
